[package]
name = "indexers"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
ghost-crab = { version = "0.8.0" }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15.7"
uniswap-v3-sdk = { version = "0.32.0", features = ["extensions", "std"] }
uniswap-sdk-core = "1.0.0-rc"
